# enum_extend

./: CMakeLists.txt  README.md  TUTORIAL.md  index.html  params.json
enum_extend/: create_extended_enum.hpp  declare_decorated_enum.hpp  declare_enum.hpp  declare_enum_class.hpp  declare_typed_enum.hpp  declare_typed_enum_class.hpp  decoration_range.hpp  define_decorated_enum.hpp  define_enum.hpp  define_enum_class.hpp  define_typed_enum.hpp  define_typed_enum_class.hpp  enum_decoration_range.hpp  enum_decorator.hpp  enum_library.hpp  enum_range.hpp  enum_value_range.hpp  extender.hpp  filtered_range.hpp  range.hpp
enum_extend/internal/: compiler_support.hpp  declare_operators_helpers.hpp  define_enum_helper.hpp  define_operators_helpers.hpp  error_handling.hpp  helper_structs.hpp  macro_helper.hpp  pp_create_explicit_enum_initializer.hpp  pp_create_initializer.hpp  pp_create_seq_from_1st_tuple2.hpp  pp_create_seq_from_1st_tuple3.hpp  pp_create_seq_from_tuple2_seq.hpp  pp_create_seq_from_tuple3_seq.hpp  pp_create_seq_from_tuple_seq.hpp  pp_helper.hpp  pp_tuple2_seq_size.hpp  pp_tuple3_seq_size.hpp  tupple_helper.hpp
source/: CMakeLists.txt  dummy.cpp
test/: CMakeLists.txt  enum_extend_declare_enum_test.cpp  enum_extend_filtered_range_test.cpp  enum_extend_macro_define_decoration_test.cpp  enum_extend_test.cpp  enum_extend_test_helper.hpp  enum_extend_with_decoration_test.cpp  enum_extend_with_multiple_decorations_test.cpp  main.cpp
